# FelgoSubmoduleHelp

MaintenanceApp/: CEosSerialMonitor.cpp  CEosSerialMonitor.h  CMakeLists.txt  CMakeLists.txt.shared  main.cpp
MaintenanceApp/android/: AndroidManifest.xml  build.gradle
MaintenanceApp/ios/: Project-Info.plist
MaintenanceApp/qml/: Main.qml  SerialOutput.qml  config.json  tst_SerialDevices.qml
MaintenanceApp/qt-qml-models/: CMakeLists.txt
MaintenanceApp/qt-supermacros/: CMakeLists.txt
MaintenanceApp/test/: CMakeLists.txt  main.cpp
MaintenanceApp/test/.qt/: QtDeploySupport.cmake
